// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|A11y/Form With label 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <div>
    <label
      for="1"
      style="padding:0 6px"
    >
      Testing the a11y addon
    </label>
    <input
      id="1"
    />
  </div>
</div>
`;

exports[`Storyshots Addons|A11y/Form With placeholder 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <div>
    <input
      id="1"
      placeholder="Testing the a11y addon"
    />
  </div>
</div>
`;

exports[`Storyshots Addons|A11y/Form Without Label 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <div>
    <input />
  </div>
</div>
`;
